# grain-protocol

./: .dockerignore  .gitattributes  .gitignore  .tmp.commit-msg  AUDIT-PACKET-v0.1.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_BOUNDARY.md  CONTRIBUTING.md  GOVERNANCE.md  MIGRATION.md  NOTICE  README.md  SECURITY.md  TOR-PORTABILITY-A01.md  TOR-SDK-A01.md  TOR.md  TRADEMARKS.md  VERSIONING.md  mise.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  conformance-vector-request.yml  implementation-bug.yml  spec-bug.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  golden-images.yml  interop-certify.yml  rc-stabilization-deep-check.yml  rc-stabilization-nightly.yml  release-evidence.yml
adr/: 0000-template.md
adr/conformance/: 0001-wave-a-byte-level-ops.md  0002-bundle-provenance-migration.md  0003-dependabot-autonomous-safe-lane.md  0004-dependabot-strict-fail-closed.md  0005-rc-discipline-policy.md
conformance/: README.md  SPEC.md  interop-matrix.v1.json  security-regressions.v1.json
core/: README.md
core/rust/: Cargo.toml  README.md
core/rust/grain-client-core/: Cargo.toml  README.md  build.rs
core/rust/grain-client-core/src/: accepted_scan.rs  binding_api.rs  custody.rs  device.rs  diag.rs  ffi_types.rs  grain_client_core.udl  identity.rs  lib.rs  memory_store.rs  pairing.rs  scan.rs  store.rs  sync.rs  trust.rs  types.rs
core/rust/grain-client-core/src/platform/: mod.rs  storage.rs  trust.rs
core/rust/grain-client-core/tests/: binding_api.rs  client_workflow_fixtures.rs  identity_device_lifecycle.rs  pairing_sync_bundle.rs  platform_scan_accept.rs  scan_accept.rs  scan_accept_prepare.rs  scan_preview.rs  storage_contract.rs  store_atomic.rs  trust_adapter_contract.rs
core/rust/grain-client-core/tests/support/: signed_qr.rs  workflow_fixture.rs
core/rust/grain-client-wasm/: Cargo.toml  README.md
core/rust/grain-client-wasm/src/: lib.rs
core/rust/grain-core/: Cargo.toml  README.md
core/rust/grain-core-wasm/: Cargo.toml  README.md
core/rust/grain-core-wasm/src/: lib.rs
core/rust/grain-core/docs/: errors.md
core/rust/grain-core/src/: cbor.rs  cborseq.rs  cid.rs  cose.rs  dagcbor.rs  e2e.rs  error.rs  ledger.rs  lib.rs  limits.rs  manifest.rs  qr.rs
core/rust/grain-core/tests/: properties.rs
core/rust/grain-issuer-kit/: Cargo.toml  README.md
core/rust/grain-issuer-kit/src/: lib.rs  main.rs
core/rust/grain-issuer-kit/tests/: reference_issuer.rs
core/rust/grain-runner/: Cargo.toml
core/rust/grain-runner/src/: main.rs
core/rust/uniffi-bindgen/: Cargo.toml
docker/: grain-certify.Dockerfile  grain-runner.Dockerfile
examples/: README.md
scripts/: bootstrap  certify  demo  doctor  fuzz-smoke  git-sandbox-safe  setup_local_hygiene.sh  verify
sdk/: README.md
spec/: FREEZE-CONFIRMATION-v0.1.md  FREEZE-v0.1.md  INTEROP-CLAIM.md  INTEROP-v0.1.md  NES-v0.1.md  RC-POLICY.md  SCOPE-v0.1.md
tools/: check_llm_docs.py  check_spec_drift.py  interop_certify.sh  validate_vectors.py
(+659 files in other folders)
