[workspace]
members = [
  "grain-core",
  "grain-runner",
  "grain-core-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.2.0"

[workspace.dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
flate2 = "1.0"
hex = "0.4"
hkdf = "0.12"
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
