[package]
name = "grain-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
